added fetch category added components module updated doc
references #22
