# functions/src/interfaces/IImageUploadModel.ts
@@ -1,0 +1,6 @@
+import { ICloudStorageUploadResponse } from "./ICloudStorageUploadResponse";
+
+export interface IImageUploadModel {
+  link: string;
+  meta: ICloudStorageUploadResponse;
+}
